# plaisir

./: Cargo.toml  LICENSE  README.md  reference.csv  results.csv  results.py  run.sh  scrape-results.py  single-run.sh  verify.sh
irp/: Cargo.toml
lkh/: Cargo.toml  README.txt
lkh-sys/: Cargo.toml  bindings.h  build.rs
lkh/src/: AddExtraCandidates.c  AddTourCandidates.c  Best2OptMove.c  Best3OptMove.c  Best4OptMove.c  Best5OptMove.c  BestKOptMove.c  BridgeGain.c  BuildKDTree.c  CandidateReport.c  ChooseInitialTour.c  Connect.c  CreateCandidateSet.c  CreateQuadrantCandidateSet.c  Create_POPMUSIC_CandidateSet.c  Distance.c  ERXT.c  FindTour.c  FreeStructures.c  Gain23.c  GenerateCandidates.c  GreedyTour.c  IsPossibleCandidate.c  LKH.c  LKHmain.c  LinKernighan.c  Makefile  MergeTourWithBestTour.c  MinimumSpanningTree.c  PatchCycles.c  ReadProblem.c  RecordBetterTour.c  SFCTour.c  Statistics.c  WriteTour.c  lib.rs
lkh/src/include/: LKH.h  libLKH.h
mcf/: Cargo.toml
plaisir/: Cargo.toml
plaisir/src/: delivery.rs  heuristic.rs  irp.rs  lib.rs  main.rs  mcf.rs  problem.rs  route.rs  solution.rs  solver.rs
plaisir/src/irp/: solver.rs
results_best/: out_L_abs10n100_2_H.txt  out_L_abs10n100_2_L.txt  out_L_abs10n100_3_H.txt  out_L_abs10n100_3_L.txt  out_L_abs10n100_4_H.txt  out_L_abs10n100_4_L.txt  out_L_abs10n100_5_H.txt  out_L_abs10n100_5_L.txt  out_L_abs10n200_2_H.txt  out_L_abs10n200_2_L.txt  out_L_abs10n200_3_H.txt  out_L_abs10n200_3_L.txt  out_L_abs10n200_4_H.txt  out_L_abs10n200_4_L.txt  out_L_abs10n200_5_H.txt  out_L_abs10n200_5_L.txt  out_L_abs10n50_2_H.txt  out_L_abs10n50_2_L.txt  out_L_abs10n50_3_H.txt  out_L_abs10n50_3_L.txt  out_L_abs10n50_4_H.txt  out_L_abs10n50_4_L.txt  out_L_abs10n50_5_H.txt  out_L_abs10n50_5_L.txt  out_L_abs1n100_2_H.txt  out_L_abs1n100_2_L.txt  out_L_abs1n100_3_H.txt  (+973 more)
(+1439 files in other folders)
