[package]
name = "irp"
version = "0.1.0"
authors = ["Stephan Beyer <s-beyer@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grb = "1.2"
thiserror = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
