[package]
name = "lkh"
version = "0.1.0"
authors = ["Stephan Beyer <s-beyer@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lkh-sys = { path = "../lkh-sys" }

[dev-dependencies.cargo-husky]
version = "1"
features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
