[package]
name = "plaisir"
version = "0.1.0"
authors = ["Stephan Beyer <s-beyer@gmx.net>"]
rust-version = "1.58"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grb = "1.3"
lkh = { path = "../lkh/" }
partitions = "0.2"
rand = "0.8"
rand_xoshiro = "0.6"
thiserror = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
